# SmartStudyChat

./: .gitignore  .replit  pyproject.toml  replit.md
.local/state/replit/agent/: .latest.json
.local/state/replit/agent/filesystem/: filesystem_state.json
CustosBot/: INSTALLATION.md  config.py  main.py  requirements.txt
CustosBot/data/: custos.db  database.py
CustosBot/handlers/: main_handlers.py  moderation_handlers.py  user_handlers.py
CustosBot/keyboards/: main_keyboards.py
CustosBot/utils/: image_generator.py
attached_assets/: Pasted--Telegram-Custos-Iris-Python--1758303307116_1758303307116.txt
